--- a/VGG19_image_Classification.ipynb
+++ b/VGG19_image_Classification.ipynb
@@ -474,7 +474,7 @@
     "#Model di save \n",
     "model.save('/content/gdrive/My Drive/models/vgg19/model_{}E.h5'.format(len(acc)))\n",
     "\n",
-    "view = ['Halal','Haram','meragukan']\n",
+    "view = ['Vhigh','High','Low','Vlow','Medium']\n",
     "classification_metrics = metrics.classification_report(test_labels, preds, target_names=view )\n",
     "print(classification_metrics)\n",
     "\n",
@@ -497,17 +497,7 @@
     "id": "3M5wgCEq2SkR",
     "outputId": "1eecde4a-b414-4ca7-e0d3-ac7e8a700378"
    },
-   "outputs": [],
-   "source": [
-    "plotcmnn = plt.figure(3)    \n",
-    "plot_confusion_matrix(confusion_matrix, ['Halal','Haram','meragukan'])  \n",
-    "plt.savefig(\"/content/gdrive/My Drive/gambar/vgg19/train/CMNN_vgg19_{}Batch_{}E_Opt={}_lr={}.jpg\".format(batch_size, len(acc),opt,lr))\n",
-    "\n",
-    "plotcmn = plt.figure(4) \n",
-    "plot_confusion_matrix(confusion_matrix, ['Halal','Haram','meragukan'],normalize=True)\n",
-    "plt.savefig(\"/content/gdrive/My Drive/gambar/vgg19/train/CMN_vgg19_{}Batch_{}E_Opt={}_lr={}.jpg\".format(batch_size, len(acc),opt,lr))"
-   ]
-  },
+ 
   {
    "cell_type": "code",
    "execution_count": 8,
@@ -530,11 +520,7 @@
       "\u001b[1;31mNameError\u001b[0m: name 'plt' is not defined"
      ]
     }
-   ],
-   "source": [
-    "#TESTING\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "#vgg19 = applications.vgg19(include_top=False, weights='imagenet')\n",
+   ]
     " \n",
     "def read_image(file_path):\n",
     "    print(\"[INFO] loading and preprocessing image...\")  \n",
@@ -544,35 +530,11 @@
     "    image /= 255.  \n",
     "    return image\n",
     "\n",
-    "def plot_confusion_matrix(cm, classes,\n",
-    "             normalize=False,\n",
-    "             title='Confusion matrix',\n",
-    "             cmap=plt.cm.Blues):\n",
-    "    if normalize:\n",
-    "        cm = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]\n",
-    "        print(\"confusion matrix yang dinormalisasi \\n\\n\\n\")\n",
-    "    else:\n",
-    "        print('Confusion matrix tanpa normalisasi \\n\\n\\n')\n",
-    "    \n",
-    "    plt.imshow(cm, interpolation='nearest', cmap=cmap)\n",
-    "    plt.title(title)\n",
-    "    plt.colorbar()\n",
-    "    tick_marks = np.arange(len(classes))\n",
-    "    plt.xticks(tick_marks, classes, rotation=45)\n",
-    "    plt.yticks(tick_marks, classes)\n",
-    "    \n",
-    "    fmt = '.2f' if normalize else 'd'\n",
-    "    thresh = cm.max() / 2.\n",
-    "    for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
-    "        plt.text(j, i, format(cm[i, j], fmt), horizontalalignment=\"center\", color=\"white\" if cm[i, j] > thresh else \"black\")\n",
-    "    \n",
-    "    plt.tight_layout()\n",
-    "    plt.ylabel('True label')\n",
-    "    plt.xlabel('Predicted label')\n",
+    "
     "\n",
     "\n",
     "def predict(path):\n",
-    "    view = ['Halal','Haram','meragukan']\n",
+    "    view = ['Vhigh','High','Low','Vlow','Medium']\n",
     "    images = read_image(path)\n",
     "#    time.sleep(.5)\n",
     "    bt_prediction = vgg19.predict(images)  \n",
@@ -660,7 +622,7 @@
     "#to fit them into classification metrics and confusion metrics, some additional modificaitions are required\n",
     "print('rounded validation_labels', preds)\n",
     "\n",
-    "view = ['Halal','Haram','meragukan']\n",
+    "view = ['Vhigh','High','Low','Vlow','Medium']\n",
     "classification_metrics = metrics.classification_report(validation_labels, preds, target_names=view )\n",
     "print(classification_metrics)\n",
     "\n",
@@ -693,43 +655,4 @@
      ]
     }
    ],
-   "source": [
-    "plotcmnn = plt.figure(5)    \n",
-    "plot_confusion_matrix(confusion_matrix, ['Halal','Haram','meragukan'])\n",
-    "plt.savefig(\"/content/gdrive/My Drive/gambar/vgg19/test/CMNN_vgg19_{}Batch_{}E_Opt={}_lr={}.jpg\".format(batch_size, len(acc),opt,lr))\n",
-    "\n",
-    "# plotcmn = plt.figure(6) \n",
-    "# plot_confusion_matrix(confusion_matrix, ['FCV','LVOT' , 'RVOT' ,'TVT' ],normalize=True)\n",
-    "# # plt.savefig('gambar/vgg19/test/20e/CMN_vgg19_20E')\n",
-    "# plt.savefig('gambar/vgg19/test/50e/CMN_vgg19_50E')"
-   ]
-  }
- ],
- "metadata": {
-  "accelerator": "GPU",
-  "colab": {
-   "collapsed_sections": [],
-   "name": "VGG19 image Classification.ipynb",
-   "provenance": []
-  },
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.4"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 1
-}
+  
